# bdz

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md  gitlab-ci.yml  submit.py
cmake/: BuildFlags.cmake  EnableCatch2.cmake  FindCatch2.cmake
contrib/catch2/: catch_shim.hpp
tasks/: CMakeLists.txt
tasks/admission/: CMakeLists.txt  admission.cpp  admission.h  readme.md  test.cpp
tasks/associative_operation/: CMakeLists.txt  README.md  associative_operation.cpp  associative_operation.h  test.cpp
tasks/chocolate/: CMakeLists.txt  chocolate.cpp  chocolate.h  readme.md  test.cpp
tasks/fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  readme.md  test.cpp
tasks/fp16/: CMakeLists.txt  README.md  fp16.cpp  fp16.h  test.cpp
tasks/lru_cache/: CMakeLists.txt  README.md  lru_cache.cpp  lru_cache.h  test.cpp
tasks/min_divisor/: CMakeLists.txt  min_divisor.cpp  min_divisor.h  readme.md  test.cpp
tasks/multiplication/: CMakeLists.txt  multiplication.cpp  multiplication.h  readme.md  test.cpp
tasks/next_even/: CMakeLists.txt  next_even.cpp  next_even.h  readme.md  test.cpp
tasks/palindrome/: CMakeLists.txt  palindrome.cpp  palindrome.h  readme.md  test.cpp
tasks/password/: CMakeLists.txt  README.md  password.cpp  password.h  test.cpp
tasks/provinces/: CMakeLists.txt  provinces.cpp  provinces.h  readme.md  test.cpp
tasks/queue/: CMakeLists.txt  queue.cpp  queue.h  readme.md  test.cpp
tasks/rational/: CMakeLists.txt  rational.cpp  rational.h  readme.md  test.cpp
tasks/safe_arithmetic/: CMakeLists.txt  README.md  safe_arithmetic.cpp  safe_arithmetic.h  test.cpp
tasks/scorer/: CMakeLists.txt  readme.md  scorer.cpp  scorer.h  test.cpp
tasks/search/: CMakeLists.txt  readme.md  search.cpp  search.h  test.cpp
tasks/sort_students/: CMakeLists.txt  readme.md  sort_students.cpp  sort_students.h  test.cpp
tasks/sound_processor/: CMakeLists.txt  application.cpp  application.h  args_parser.cpp  args_parser.h  converter.cpp  converter.h  errors.h  filters.cpp  filters.h  main.cpp  pipeline.cpp  pipeline.h  test.cpp  wav_io.cpp  wav_io.h  waveform.cpp  waveform.h
tasks/stack/: CMakeLists.txt  readme.md  stack.cpp  stack.h  test.cpp
tasks/tests_checking/: CMakeLists.txt  readme.md  test.cpp  tests_checking.cpp  tests_checking.h
tasks/transpose_matrix/: CMakeLists.txt  README.md  test.cpp  transpose_matrix.cpp  transpose_matrix.h
tasks/unixpath/: CMakeLists.txt  readme.md  test.cpp  unixpath.cpp  unixpath.h
tasks/varint/: CMakeLists.txt  README.md  test.cpp  varint.cpp  varint.h
tasks/vector_minmax/: CMakeLists.txt  readme.md  test.cpp  vector_minmax.cpp  vector_minmax.h
