### Individual tasks
# comment or uncomment out an individual target in order to exclude it from/include it to the main project

# 0
add_subdirectory(multiplication)

# 1
add_subdirectory(associative_operation)
add_subdirectory(palindrome)
add_subdirectory(password)
add_subdirectory(next_even)
add_subdirectory(chocolate)
add_subdirectory(min_divisor)
add_subdirectory(fibonacci)
add_subdirectory(varint)
add_subdirectory(fp16)

#2
add_subdirectory(transpose_matrix)
add_subdirectory(admission)
add_subdirectory(scorer)
add_subdirectory(sort_students)
add_subdirectory(tests_checking)
add_subdirectory(unixpath)
